--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <title>Odin sign up form</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="image-side"></div>
+        <div class="form-container">
+            <form action="" method="post" class="sign-up">
+                <h3>Create an account</h3>
+                <div class="hw-form-row">
+                    <label for="first-name">First name</label>
+                    <input type="text" id="first-name" name="first-name required">
+                </div>
+                <div class="hw-form-row">
+                    <label for="last-name">First name</label>
+                    <input type="text" id="last-name" name="last-name required">
+                </div>
+                <div class="fw-form-row">
+                    <label for="email">Email adress:</label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
