js form validation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&display=swap" rel="stylesheet">
-    <script src="form.js"></script>
     <title>Odin sign up form</title>
 </head>
 <body>
@@ -27,7 +26,7 @@
     </section>
     <section class="form">
         <div class="hero-text">
-            <h2>Welcome to this thing that I made, try to sign up, it won't actually submit anything</h2>
+            <h2>Welcome to this thing that I made. Try to sign up, it won't actually submit anything</h2>
             <p>We can pretend though, and see if my client-side validation works!</p>
         </div>
         <div class="form-container">
@@ -59,14 +58,18 @@
                         <label for="confirm-password">Confirm Password:</label>
                         <input type="password" id="confirm-password" name="confirm-password"
                                 placeholder="Retype password" minlength="6">
+                        <span class="error"><p>PASSWORDS DO NOT MATCH!</p></span>
                     </div>
                 </div>
                 <button class="submit-btn" type="submit"> Sign up</button>
+                <span class="success"><p>Congratulations, your form was submitted</p></span>
             </form>
             <div class="login">
                 <p>Or if you already have an account, <a href="#">sign in here</a></p>
             </div>
         </div>
     </section>
+
+    <script src="form.js"></script>
 </body>
 </html>
